migrate old posts

--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,16 @@
 # main text of home
-name: John Doe
-bio: 'A Man who travels the world eating noodles'
+name: Alvie
+bio: ';-)'
 
 # if it's an external image, update below for true
 external-image: false
 picture: 'assets/images/profile.jpg'
 
-url: http://koppl.in/indigo
+url: http://alvie.net
 # your url: http://USERNAME.github.io
 
 permalink: /:title/
+# permalink: /:year/:title/
 
 markdown: kramdown
 highlighter: rouge
@@ -22,20 +23,20 @@ highlighter: rouge
 # analytics-piwik-id: 1
 
 # if you don't want comments in your posts, set to false
-disqus: mydisqus
+disqus: alvies-blog
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
+# facebook: myfacebook
+twitter: alviezhang
 # google: mygoogle
 # instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
-youtube: myyoutube
-spotify: myspotify
-github: mygithub
-medium: medium
-email: myemail@gmail.com
+# youtube: myyoutube
+# spotify: myspotify
+github: alviezhang
+# medium: medium
+# email: myemail@gmail.com
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
@@ -43,18 +44,18 @@ email: myemail@gmail.com
 width: normal
 
 # if you don't need pagination, comment the *paginate* configs below
-# paginate: 5
-# paginate_path: "blog/:num/"
+paginate: 5
+paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
-projects: true
+# projects: true
 
 # if you don't need "about" or "blog", comment them out below
 about: true
 blog: true
 
 # do you want to show the "read time" of the posts?
-read-time: true
+read-time: false
 
 # do you want to show the "tags" inside the posts?
 show-tags: true
