--- a/_config.yml
+++ b/_config.yml
@@ -9,14 +9,14 @@ picture: 'assets/images/profile.jpg'
 url: http://alvie.net
 # your url: http://USERNAME.github.io
 
-permalink: /:title/
-# permalink: /:year/:title/
+# permalink: /:title/
+permalink: /:year/:title/
 
 markdown: kramdown
 highlighter: rouge
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'UA-59721977-3'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
@@ -44,8 +44,8 @@ github: alviezhang
 width: normal
 
 # if you don't need pagination, comment the *paginate* configs below
-paginate: 5
-paginate_path: "blog/:num/"
+# paginate: 5
+# paginate_path: "blog/:num/"
 
 # if you don't need projects, comment the *projects* configs below
 # projects: true
