--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ bio: ';-)'
 external-image: false
 picture: 'assets/images/profile.png'
 
-url: http://alvie.net
+url: https://alvie.net
 # your url: http://USERNAME.github.io
 
 # permalink: /:title/
