disable post sharing

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
 name: Alvie's Blog
-bio: "If you’re going through hell, keep going."
+bio: "If you're going through hell, keep going"
 
 # if it's an external image, update below for true
 external-image: false
