--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio: "If you're going through hell, keep going"
 
 # if it's an external image, update below for true
 external-image: false
-picture: 'assets/images/profile.jpg'
+picture: 'assets/images/profile.png'
 
 url: https://alvie.net
 # your url: http://USERNAME.github.io
